1999-12-21  Shuhei KOBAYASHI  <shuhei@aqua.ocn.ne.jp>

	* apel-ver.el: Footer fix.

1999-12-13  Katsumi Yamaoka   <yamaoka@jpl.org>

	* README.ja: Sync up with README.en.

	* README.en: Fix what versions of Emacsen can use
	`normal-top-level-add-to-load-path'.

1999-12-21  Yuuichi Teranishi  <teranisi@gohome.org>

	* poe-18.el (current-time-zone): New function.
	(current-time-world-timezones, current-time-local-timezone):
	New variables.
	(current-time-string): Use `current-time-zone' to get local timezone.
	(current-time): Ditto.

	* timezone.el: New file.

	* APEL-ELS (apel-modules): Add `timezone' if existing timezone.el
	has y2k problem.

	* product.el (product-string-1): Use `int-to-string' instead of
	`number-to-string'.

1999-12-20  Shuhei KOBAYASHI  <shuhei@aqua.ocn.ne.jp>

	* apel-ver.el, product.el: Header fix.

1999-12-20  Keiichi Suzuki  <keiichi@nanap.org>

	* alist.el, atype.el, broken.el, calist.el, emu-mule.el, emu.el,
	  env.el, file-detect.el, filename.el, install.el, inv-18.el,
	  inv-19.el, inv-xemacs.el, invisible.el, localhook.el,
	  mcharset.el, mcs-20.el, mcs-e20.el, mcs-ltn1.el, mcs-nemacs.el,
	  mcs-om.el, mcs-xm.el, mcs-xmu.el, mule-caesar.el, path-util.el,
	  pccl-20.el, pccl-om.el, pccl.el, pces-20.el, pces-e20.el,
	  pces-e20_2.el, pces-nemacs.el, pces-om.el, pces-raw.el,
	  pces-xfc.el, pces-xm.el, pces.el, pcustom.el, poe-18.el,
	  poe-xemacs.el, poe.el, poem-e20.el, poem-e20_2.el,
	  poem-e20_3.el, poem-ltn1.el, poem-nemacs.el, poem-om.el,
	  poem-xm.el, poem.el, richtext.el, static.el, time-stamp.el,
	  tinycustom.el, tinyrich.el (TopLevel): Add product information.

	* Sync up with apel-product.

* 1999-11-12  Keiichi Suzuki  <keiichi@nanap.org>

	* product.el (product-define): Add new slot `version-string'.
	(product-provide): Likewise.
	(product-version-string): New function.
	(product-set-version-string): New function.
	(product-string-1): Use `version-string'.
	(product-for-each): New function.