@@ -1,3 +1,8 @@
+1999-12-22  Yuuichi Teranishi  <teranisi@gohome.org>
+
+	* timezone.el: Modified comments.
+	(toplevel): Require 'product.
+
 1999-12-21  Shuhei KOBAYASHI  <shuhei@aqua.ocn.ne.jp>
 
 	* apel-ver.el: Footer fix.
